[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "integration-adaptors-common"
version = "0.1.0"
description = "Common utilities used by the NHS integration adaptors projects."
readme = "README.md"
authors = [
    {name = "NIA Development Team", email = "niasupport@nhs.net"}
]
license = {text = "Apache 2.0"}
requires-python = ">=3.11"
dependencies = [
    "pystache~=0.6.7",
    "lxml~=5.3",
    "python-qpid-proton~=0.39.0",
    "tornado==6.5.4",
    "isodate~=0.7.2",
    "aioboto3~=15.5.0",
    "pymongo>=4.16",
    "aiohttp==3.13.3"
]

[tool.setuptools]
packages = {find = {}}