[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mhs-common"
version = "0.1.0"
description = "MHS Common utilities used by the NHS integration adaptors projects."
readme = "README.md"
authors = [
    {name = "NIA Development Team", email = "niasupport@nhs.net"}
]
license = {text = "Apache 2.0"}
requires-python = ">=3.11"
dependencies = [
    "defusedxml~=0.7.1",
    "aioboto3~=15.5.0",
    "tornado==6.5.4",
    "isodate~=0.7.2",
    "marshmallow>=3.26.2"
]
requires-python = ">=3.11"

[tool.setuptools]
packages = {find = {}}